# MLOps-for-Iris-Classification

./: README.md  docker-compose.yaml  dvc.yaml  main.py  preprocess.py  prometheus.yml  pyproject.toml
api/: Dockerfile  api.py  requirements.txt
data/: classes.json  data.csv.dvc  finetune.csv  test.csv  train.csv
finetune/: Dockerfile  finetune.py  finetune_flow.py  requirements.txt
models/: model.onnx
study/: DVC.md  Docker.md  MLOps.md  Pandas.md  Poetry.md  fastapi.md  grafana.md  matplotlib.md  mlflow.md  numpy.md  onnxruntime.md  prefect.md  prometheus.md  skl2onnx.md  sklearn.md
